--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1752,108 +1752,107 @@ stories:
   domain: http://www.tiftongazette.com/
   link: https://www.tiftongazette.com/head-of-school-victoria-harris/image_4987462a-2bde-11ea-a9d5-e709057fb577.html
 images:
-- name: locked-up-steam-lock-up-steam-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-mucha-mult.jpg
-- name: old-door-lock-old-door-lock-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-propaganda-leaflets.jpg
-- name: art-albert-giacometti-Isaku Yanaihara.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-albert-giacometti-Isaku
-    Yanaihara.jpg
-- name: yosemite-yosemite-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-soul.jpg
-- name: yosemite-yosemite-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
-- name: status-berlin-status-berlin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-purple-pond.jpg
-- name: birdhouse-birdhouse-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-graham-sutherland.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
-- name: san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-- name: dragon-desert-desert-dragon-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-color.jpg
-- name: aws-s3-deserthills-deserthills-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-600.jpg
-- name: adam-smith-adam-smith-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
-- name: razorcliff-razorcliff-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-really-hot.jpg
-- name: scream-IMG_7788.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
-- name: christianity-christianity-under-construction-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-bright-sand.jpg
-- name: server-cloud-server-racks-door-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alberto-giacometti.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-clean-view.jpg
-- name: braceros-domingo-ulloa-san-francisco-skyline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-skyline.jpg
-- name: mediterranean-mediterranean-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-kandinsky-bv.jpg
-- name: fence-fence-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colored-circuits.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-far-away.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-far-away.png
-- name: abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
-- name: 35562068104_fa20c57575-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-nazi-invasion.jpg
-- name: gypsy-wagon-gypsywagon-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-three.jpg
-- name: aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
-- name: hollywood-building-hollywood-building-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit.jpg
-- name: white-house-whitehouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-aqua.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-3.jpg
-- name: oldhotel-oldhotel-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kand-two.jpg
-- name: trucksilo-trucksilo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-neo-instinct.jpg
-- name: oldhousecars-house-old-cars-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-dali.jpg
-- name: adam-smith-adam-smith-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kand-two.jpg
-- name: art-lange-otto-the-mocking-of-christ.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-lange-otto-the-mocking-of-christ.jpg
-- name: supreme-court-supremecourt-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-circuit.jpg
-- name: ellis-island-ellisisland-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-creativity.jpg
-- name: store-on-corner-oldcabin-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-light-dali.jpg
-- name: stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-- name: old-gas-pumps-oldgaspumps-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-mucha-mult.jpg
-- name: white-house-lawn-white-house-window-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-plentiful.jpg
-- name: nazi-invasion-times-square-up-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-times-square-up-road.jpg
-- name: locked-up-steam-lock-up-steam-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-wav-pr.jpg
-- name: nyc-flag-nycflag-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-dali.jpg
-- name: scream-IMG_7916.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7916.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
-- name: supreme-court-supremecourt-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-alberto-giacometti.jpg
-- name: paris-paris-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-brush.jpg
-- name: white-house-lawn-white-house-lawn-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-ww2-color.jpg
-- name: adam-smith-adam-smith-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
-- name: bluelake-hot-spicy-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-01-17-38.jpg
+- name: nazi-invasion-eagle-spread-tree-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-eagle-spread-tree-2.jpg
+- name: wind-mills-windmills-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-creativity.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
+- name: curtain-curtain-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-blocks.jpg
+- name: copper-circuit-public-market-farmers-market.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-public-market-farmers-market.jpg
+- name: oldsmallboat-oldsmallboat-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-deep-connections.jpg
+- name: power-lines-power-lines-empty-space-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-blocks.jpg
+- name: oldbarn-oldbarn-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-deep-connections.jpg
+- name: curtain-curtain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-granite.jpg
+- name: liberty-back-statue-liberty-back-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-umberto-bocc.jpg
+- name: stalin-time-nyc-subway-train-125th.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-nyc-subway-train-125th.jpg
+- name: aws-s3-stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+- name: oldhousecars-house-old-cars-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-wols.jpg
+- name: gypsymosaic-gypsy-eyes-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-dali.jpg
+- name: powerlines-power-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-rain.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+- name: rain-princess-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
+- name: legal-statue-legalstatue-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-dresden.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-ww2-dresden.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-ww2-dresden.png
+- name: gypsymosaic-gypsy-eyes-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-monet-one.jpg
+- name: old-door-lock-old-door-lock-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kand-two.jpg
+- name: art-museum-art-museum-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-smooth-ride.jpg
+- name: fence-fence-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crafty-painting.jpg
+- name: old-church-oldchurch-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-kandinsky-bv.jpg
+- name: stalin-time-san-francisco-wharf-clock.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-wharf-clock.jpg
+- name: adam-smith-adam-smith-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
+- name: la-muse-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-fence-down-the-line-2.jpg
+- name: mediterranean-mediterranean-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-far-away.jpg
+- name: cargo-ship-cargo-ship-on-sea-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-matrix.jpg
+- name: status-berlin-status-berlin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kandinsky-bv.jpg
+- name: old-cabin-oldcabin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-rain.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-granite.jpg
+- name: oldtrain-oldtrain-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colorful-dream.jpg
+- name: stalin-time-train-france-high-speed-in-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-france-high-speed-in-station.jpg
+- name: downtheline-downtheline-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
+- name: old-granary-field-granaryfield-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-far-away.jpg
+- name: copper-circuit-early-computer-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-early-computer-bletchley.jpg
+- name: dragon-desert-desert-dragon-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-clean-view.jpg
+- name: abe-lincoln-one-smooth-ride-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-15-87.jpg
+- name: downtown-trucksilo-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-kand-two.jpg
+- name: berlinwall2-berlinwall-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-colorful-dream.jpg
+- name: paris-paris-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-aqua.jpg
+- name: stories-old-gas-pumps.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-gas-pumps.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+- name: abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
+- name: store-on-corner-store-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-light-dali.jpg
+- name: nazi-invasion-IMG_8355.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8355.jpg
+- name: stories-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-matrix.jpg
+- name: flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit.jpg
 ---
 Bath To Advertise For Police Officers.&nbsp;Man Rescued From Deep Construction Site Hole In Los Angeles.&nbsp;Pressure Nothing New For Eagles As They Prepare For Seattle.&nbsp;Public Safety Facility Study Approved, Despite Concerns.&nbsp;Video Edited To Suggest Biden Made Racist Remark.&nbsp;Exjuez De Corte Suprema Argentina Asume Defensa De Morales.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;Duke Energy Agrees To Remove Coal Ash In North Carolina.&nbsp;
